# mygamelist

./: .dockerignore  .gitignore  README.md  api-dev.err  docker-compose.yml
api/: Dockerfile  pyproject.toml  requirements.txt
api/app/: admin.py  config.py  database.py  main.py  models.py  schemas.py  security.py
api/migrations/: 001_create_users.sql
api/tests/: conftest.py  test_admin.py  test_auth.py
bff/: Dockerfile  pyproject.toml  requirements.txt
bff/app/: config.py  main.py  sessions.py
bff/tests/: test_bff.py
docs/: 00-setup-from-scratch.md  01-authentication.md  02-jwt.md  03-authorization.md  4_question_Framework.md  MyGameList.md
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/components/auth/: FormField.jsx
frontend/src/components/layout/: AuthShell.jsx
frontend/src/components/ui/: alert.jsx  button.jsx  card.jsx  checkbox.jsx  input.jsx  label.jsx
frontend/src/lib/: api.js
frontend/src/pages/: AdminPage.jsx  DashboardPage.jsx  LoginPage.jsx  RegisterPage.jsx
localstack/init/: 01-create-db-secret.sh  02-create-jwt-secret.sh
