[project]
name = "mygamelist-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi==23.1.0",
    "boto3==1.35.90",
    "email-validator==2.2.0",
    "fastapi==0.115.6",
    "psycopg[binary]==3.2.3",
    "pydantic-settings==2.7.1",
    "pyjwt==2.10.1",
    "sqlmodel==0.0.22",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = false
